--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,39 @@
+/*=============== BASE ===============*/
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: black;
+    background: #121214;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+}
+
+
+:root {
+    --primary: #6C38CC;
+    --anti-acent: #7C7CBA;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+/*=============== MAIN ===============*/
+.wrapper {
+    background: #202024;
+    border-radius: 8px;
+    padding: 30px 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.timer {
+    display: flex;
+
 }
