--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,100 @@ body {
 
 .timer {
     display: flex;
-
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
 }
+
+.info {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 160%;
+}
+
+.info input {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--anti-acent);
+    padding: 5px 10px;
+    width: 40px;
+    background: none;
+    border: none;
+    text-align: center;
+}
+
+.info input::-webkit-outer-spin-button,
+.info input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.info input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.countdown {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.num {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 160px;
+    line-height: 1;
+    background: #29292E;
+    padding: 40px 16px;
+    border-radius: 8px;
+}
+
+.dots {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 160px;
+    color: var(--primary);
+}
+
+.button {
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+    background: var(--primary);
+    border: none;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 17px;
+    width: 100%;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
